--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^7.3.1",
     "poker-ts": "^1.0.0",
     "socket.io": "^4.7.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "username-generator": "^1.1.0"
   }
 }
