--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "poker-ts": "^1.0.0",
+    "pokersolver": "^2.1.4",
     "socket.io": "^4.7.1",
     "typescript": "^5.1.6",
+    "underscore": "^1.13.6",
     "username-generator": "^1.1.0"
   }
 }
