--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 4001
-DB = mongodb+srv://Samuel:Aa112211@samuelx.nff7k2l.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET = slowdown
+DB = mongodb+srv://poker_Game:Al6vhU57tZp6zgzX@cluster0.v8sgmvu.mongodb.net/?retryWrites=true&w=majority
